public/css/style.less
@import "vars.less";
body, ul, menu, div, h1, h2, h3, h4, h5, h6, p, ul, ol, li, dl, dt, dd, img, form, fieldset, input, textarea, blockquote {
    margin: 0;
    padding: 0;
    border: 0;
}

body {
    background-color: #000;
    // background-image: url(images/static.gif);
    font-family: 'Quicksand', sans-serif;
    letter-spacing: 0.3em;
    font-size: 14px;
    overflow: hidden;
}

body, html {
    height: 100%;
}

a {
    color: #ded7bd;
    text-decoration: none;
    &:hover {
        color: #af9a77;
    }
}


/* -------------- TV -------------- */

#tv {
    background-image: url(images/tv-2.png);
    /*url(images/shading.png);*/
    background-size: 100% 100%;
    height: 100%;
    width: 100%;
    z-index: @z-standard-video-hover-blocker;
    position: absolute;
    top: 0;
    left: 0;
    /*pointer-events: none //enable clicking the video layer below*/
    transition: all 0.5s ease;
    &.fullscreen {
        z-index: @z-fullscreen-video-hover-blocker;
        transition: all 0.5s ease;
        background-image: none;
    }
}

iframe {
    z-index: @z-standard-video;
    position: absolute;
    top: 0;
    left: 0;
    height: 390px;
    width: 640px;
    &#player {
        margin-top: -7px;
    }
}

#content {
    width: 60%;
    height: 65%;
    position: relative;
    top: 20%;
    left: 10%;
    text-align: center;
    color: #fff;
    position: relative;
    z-index: @z-standard-video;
    width: 87%;
    height: 90%;
    top: 5%;
    left: 7%;
    text-align: center;
    transition: all 0.5s ease;
    &.fullscreen {
        position: absolute;
        z-index: @z-fullscreen-video;
        width: 100%;
        height: 100%;
        top: 0;
        left: 0;
        text-align: center;
        transition: all 0.5s ease;
    }
}

.videowrapper {
    float: none;
    clear: both;
    width: 100%;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: @z-standard-video;
    content: "";
    :after {
        /*hide yt-logo*/
        position: absolute;
        bottom: 0;
        left: 0;
        width: 100%;
        height: 100%;
        z-index: @z-standard-video;
        content: "";
        position: absolute;
        height: 57PX;
    }
    iframe {
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
    }
}


/* -------------- Error -------------- */

.error {
    h1, h2, h3 {
        color: red;
    }
    background-color:rgba(50, 50, 50, 0.5);
    color: white;
}


/* -------------- Extra overlays -------------- */

#logo {
    display: block;
    width: 20%;
    margin: 0 auto 2em auto;
    img {
        max-width: 100%;
    }
}

.mtv-logo {
    position: absolute;
    top: -20px;
    left: -30px;
    width: 190px;
    z-index: @z-logos;
    &--hidden {
        display: none;
    }
}

.logo {
    position: absolute;
    bottom: 2px;
    left: 5px;

    font-size: 50px;
    font-family: Helvetica;
    color: #eee;
    letter-spacing: normal;
    width: 100%;
    text-align: left;
    margin-left: 5px;
    &--horror {
        font-family: ChunkFive, Helvetica;
        text-shadow: 1px 0px #a70e0e;
        color: rgb(78, 71, 161);
        font-size: 37px;
        max-width: 300px;
    }
    &--western {
        font-family: ChunkFive, Helvetica;
        font-size: 37px;
        max-width: 300px;
    }
    &--scifi {
        font-family: Oswald, Consolas;
        color: #eee;
        font-size: 49px;
        max-width: 290px;
        font-weight: normal;
    }
    &--classics {
        font-family: ChunkFive, Helvetica;
        color: #eee;
        font-size: 49px;
        max-width: 290px;
        font-weight: normal;
    }
}


/* -------------- GUI -------------- */

.fullscreen-menu {
    z-index: @z-fullscreen-control-overlay;
    position: absolute;
    bottom: 5px;
    right: 5px;
    opacity: 1;
    transition: all 0.5s ease;
    -webkit-animation: slide 0.5s forwards;
    -webkit-animation-delay: 2s;
    animation: slide 0.5s forwards;
    animation-delay: 2s;
    height: auto;
    width: auto;
    display: block;
    &.hidden {
        opacity: 0;
        transition: all 0.5s ease;
        transition: all 0.5s ease;
        -webkit-animation: slide 0.5s forwards;
        -webkit-animation-delay: 2s;
        animation: slide 0.5s forwards;
        animation-delay: 2s;
        // height: 0;
        // width: 0;
    }
    .close-fullscreen {
        color: white;
        &:hover {
            cursor: pointer;
        }
    }
}

.no-cursor {
    //hide cursor in fullscreen mode
    cursor: none;
}

@-webkit-keyframes slide {
    100% {
        left: 0;
    }
}

@keyframes slide {
    100% {
        left: 0;
    }
}

@font-face {
    font-family: ChunkFive;
    src: url(Chunkfive.otf);
}

